tests/NormalTests/paczka1/fuzzy1/30765623.err
Error in line 6: X7wGT5 S962 6,0
Error in line 10: X7wGT5 A14 55,8
Error in line 16: 6tEAaRF S962 63,72
Error in line 22: MYh A316 72,8
Error in line 19: S312 S962 54,9
Error in line 28: S312 A14 96,4
